--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ jspm_packages/
 bower_components/
 
 # Build output
-dist/
 build/
 coverage/
 
@@ -39,3 +38,5 @@ yarn.lock
 # Windows system files
 Thumbs.db
 Desktop.ini
+
+.parcel-cache
