--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "js-utils",
   "version": "1.0.5",
   "description": "A collection of JavaScript utilities for common tasks in web development.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start-server": "http-server -p 8080",
-    "cypress": "cypress open --browser chrome",
+    "dev": "parcel src/index.html --open --no-cache --port 3000",
+    "build": "del-cli dist/* && parcel build src/index.js --public-url /js-utils --no-content-hash --no-source-maps",
     "test": "npm run start-server & cypress run --browser chrome && kill $!",
-    "dev": "npm run start-server & npm run cypress"
+    "start-server": "parcel src/index.html --no-cache --port 3001",
+    "cypress": "cypress open --browser chrome",
+    "dev-tests": "npm run start-server & npm run cypress",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [
     "javascript",
@@ -30,11 +33,13 @@
   "private": false,
   "devDependencies": {
     "cypress": "^13.15.0",
-    "http-server": "^14.1.1"
+    "del-cli": "^6.0.0",
+    "gh-pages": "^6.2.0",
+    "parcel": "^2.12.0"
   },
   "directories": {
     "doc": "docs",
-    "example": "examples",
+    "example": "src/examples",
     "test": "tests"
   },
   "dependencies": {
