--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,15 +1,14 @@
 # Site settings
-title: Jekyll Doc Theme
-email: your-email@domain.com
+title: JS Utils
+email: info@lukov.io
 description: >
-  Jekyll Template for Project Websites
-  providing documentation and blog post pages.
+  Documentation for JS-Utils library
 lang: en-US
 
-baseurl: "/js-utils" # the subpath of your site, e.g. /blog/
-url: https://aksakalli.github.io/jekyll-doc-theme # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
-git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
+baseurl: "/js-utils"
+url: https://lukov-io.github.io/js-utils
+git_address: https://github.com/lukov-io/js-utils
+git_edit_address: https://github.com/lukov-io/js-utils/blob/master/site
 
 # theme options from https://bootswatch.com/3/
 # comment out this to use default Bootstrap
