improved accordion example and fix common bug with headers

--- a/site/_data/docs.yml
+++ b/site/_data/docs.yml
@@ -2,3 +2,15 @@
   docs:
     - accordion
     - accordion/example
+
+- title: Getting Started Jekyll
+  docs:
+    - home
+    - themes
+    - customization
+
+- title: Examples Jekyll
+  docs:
+    - cheatsheet
+    - font-awesome
+    - bootstrap
