--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "author": "lukov.io/IktaNikuba",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lukov-io/wskit"
+    "url": "git+https://github.com/lukov-io/wskit.git"
   },
   "bugs": {
     "url": "https://github.com/lukov-io/wskit/issues"
@@ -53,5 +53,245 @@
     "doc": "js/docs",
     "example": "html-examples/examples",
     "test": "cypress/integration"
-  }
+  },
+  "dependencies": {
+    "acorn": "^8.13.0",
+    "aggregate-error": "^3.1.0",
+    "ansi-colors": "^4.1.3",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^3.2.1",
+    "arch": "^2.2.0",
+    "array-union": "^2.1.0",
+    "asn1": "^0.2.6",
+    "assert-plus": "^1.0.0",
+    "astral-regex": "^2.0.0",
+    "async": "^3.2.6",
+    "asynckit": "^0.4.0",
+    "at-least-node": "^1.0.0",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.13.2",
+    "base64-js": "^1.5.1",
+    "bcrypt-pbkdf": "^1.0.2",
+    "blob-util": "^2.0.2",
+    "bluebird": "^3.7.2",
+    "braces": "^3.0.3",
+    "browserslist": "^4.24.0",
+    "buffer": "^5.7.1",
+    "buffer-crc32": "^0.2.13",
+    "buffer-from": "^1.1.2",
+    "cachedir": "^2.4.0",
+    "call-bind": "^1.0.7",
+    "caniuse-lite": "^1.0.30001669",
+    "caseless": "^0.12.0",
+    "chalk": "^2.4.2",
+    "check-more-types": "^2.24.0",
+    "ci-info": "^3.9.0",
+    "clean-stack": "^2.2.0",
+    "cli-cursor": "^3.1.0",
+    "cli-table3": "^0.6.5",
+    "cli-truncate": "^2.1.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colorette": "^2.0.20",
+    "combined-stream": "^1.0.8",
+    "commander": "^6.2.1",
+    "common-tags": "^1.8.2",
+    "commondir": "^1.0.1",
+    "convert-source-map": "^2.0.0",
+    "core-util-is": "^1.0.2",
+    "cross-spawn": "^7.0.3",
+    "dashdash": "^1.14.1",
+    "dayjs": "^1.11.13",
+    "debug": "^4.3.7",
+    "deepmerge": "^4.3.1",
+    "define-data-property": "^1.1.4",
+    "del": "^8.0.0",
+    "delayed-stream": "^1.0.0",
+    "dir-glob": "^3.0.1",
+    "ecc-jsbn": "^0.1.2",
+    "electron-to-chromium": "^1.5.41",
+    "email-addresses": "^5.0.0",
+    "emoji-regex": "^8.0.0",
+    "end-of-stream": "^1.4.4",
+    "enquirer": "^2.4.1",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "escalade": "^3.2.0",
+    "escape-string-regexp": "^1.0.5",
+    "estree-walker": "^2.0.2",
+    "eventemitter2": "^6.4.7",
+    "execa": "^4.1.0",
+    "executable": "^4.1.1",
+    "extend": "^3.0.2",
+    "extract-zip": "^2.0.1",
+    "extsprintf": "^1.3.0",
+    "fast-glob": "^3.3.2",
+    "fastq": "^1.17.1",
+    "fd-slicer": "^1.1.0",
+    "fdir": "^6.4.2",
+    "figures": "^3.2.0",
+    "filename-reserved-regex": "^2.0.0",
+    "filenamify": "^4.3.0",
+    "fill-range": "^7.1.1",
+    "find-cache-dir": "^3.3.2",
+    "find-up": "^4.1.0",
+    "forever-agent": "^0.6.1",
+    "form-data": "^4.0.1",
+    "fs-extra": "^9.1.0",
+    "fsevents": "^2.3.3",
+    "function-bind": "^1.1.2",
+    "gensync": "^1.0.0-beta.2",
+    "get-intrinsic": "^1.2.4",
+    "get-stream": "^5.2.0",
+    "getos": "^3.2.1",
+    "getpass": "^0.1.7",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^3.0.1",
+    "globals": "^11.12.0",
+    "globby": "^14.0.2",
+    "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
+    "has-flag": "^3.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.2",
+    "http-signature": "^1.4.0",
+    "human-signals": "^1.1.1",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.3.2",
+    "indent-string": "^4.0.0",
+    "ini": "^2.0.0",
+    "is-ci": "^3.0.1",
+    "is-core-module": "^2.15.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-installed-globally": "^0.4.0",
+    "is-module": "^1.0.0",
+    "is-number": "^7.0.0",
+    "is-path-cwd": "^3.0.0",
+    "is-path-inside": "^4.0.0",
+    "is-reference": "^1.2.1",
+    "is-stream": "^2.0.1",
+    "is-typedarray": "^1.0.0",
+    "is-unicode-supported": "^0.1.0",
+    "isexe": "^2.0.0",
+    "isstream": "^0.1.2",
+    "jest-worker": "^26.6.2",
+    "js-tokens": "^4.0.0",
+    "jsbn": "^0.1.1",
+    "jsesc": "^3.0.2",
+    "json-schema": "^0.4.0",
+    "json-stringify-safe": "^5.0.1",
+    "json5": "^2.2.3",
+    "jsonfile": "^6.1.0",
+    "jsprim": "^2.0.2",
+    "lazy-ass": "^1.6.0",
+    "listr2": "^3.14.0",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lodash.once": "^4.1.1",
+    "log-symbols": "^4.1.0",
+    "log-update": "^4.0.0",
+    "lru-cache": "^5.1.1",
+    "magic-string": "^0.30.12",
+    "make-dir": "^3.1.0",
+    "meow": "^13.2.0",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "mime": "^2.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.3",
+    "node-releases": "^2.0.18",
+    "npm-run-path": "^4.0.1",
+    "object-inspect": "^1.13.2",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "ospath": "^1.2.2",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-map": "^7.0.2",
+    "p-try": "^2.2.0",
+    "path-exists": "^4.0.0",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^5.0.0",
+    "pend": "^1.2.0",
+    "performance-now": "^2.1.0",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.2",
+    "pify": "^2.3.0",
+    "pkg-dir": "^4.2.0",
+    "pretty-bytes": "^5.6.0",
+    "process": "^0.11.10",
+    "proxy-from-env": "^1.0.0",
+    "psl": "^1.9.0",
+    "pump": "^3.0.2",
+    "punycode": "^2.3.1",
+    "qs": "^6.13.0",
+    "querystringify": "^2.2.0",
+    "queue-microtask": "^1.2.3",
+    "randombytes": "^2.1.0",
+    "request-progress": "^3.0.0",
+    "requires-port": "^1.0.0",
+    "resolve": "^1.22.8",
+    "restore-cursor": "^3.1.0",
+    "reusify": "^1.0.4",
+    "rfdc": "^1.4.1",
+    "rollup-pluginutils": "^2.8.2",
+    "run-parallel": "^1.2.0",
+    "rxjs": "^7.8.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^6.3.1",
+    "serialize-javascript": "^4.0.0",
+    "set-function-length": "^1.2.2",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.0.6",
+    "signal-exit": "^3.0.7",
+    "slash": "^5.1.0",
+    "slice-ansi": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.21",
+    "sshpk": "^1.18.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-final-newline": "^2.0.0",
+    "strip-outer": "^1.0.1",
+    "supports-color": "^5.5.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "terser": "^5.36.0",
+    "throttleit": "^1.0.1",
+    "through": "^2.3.8",
+    "tmp": "^0.2.3",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "tough-cookie": "^4.1.4",
+    "trim-repeated": "^1.0.0",
+    "tslib": "^2.8.0",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-fest": "^0.21.3",
+    "undici-types": "^6.19.8",
+    "unicorn-magic": "^0.1.0",
+    "universalify": "^2.0.1",
+    "untildify": "^4.0.0",
+    "update-browserslist-db": "^1.1.1",
+    "url-parse": "^1.5.10",
+    "uuid": "^8.3.2",
+    "verror": "^1.10.0",
+    "which": "^2.0.2",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "yallist": "^3.1.1",
+    "yauzl": "^2.10.0"
+  },
+  "license": "ISC"
 }
